# regex-arena

./: .gitignore  README.md  pyproject.toml  regex_crew.json
src/regex_crew/: __init__.py  callbacks.py  crew.py  e2b_main.py  main.py  main2.py  regex_task.py  run.py  test_code.py  test_execute_e2b.py  text_regex.py
src/regex_crew/tools/: execute_e2b.py  regex_evaluate_template.py
src/web_api/: main.py
