[project]
name = "regex_crew"
version = "0.1.0"
description = "regex-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
regex_crew = "regex_crew.main:run"
run_crew = "regex_crew.main:run"
train = "regex_crew.main:train"
replay = "regex_crew.main:replay"
test = "regex_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
