[project]
name = "regex_crew"
version = "0.1.0"
description = "regex_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "e2b-code-interpreter>=1.1.1",
]

[project.scripts]
run = "regex_crew.main:run"
run_crew = "regex_crew.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/regex_crew"]
